# micita_backend

./: .env.example  Cargo.toml  README.md
docs/: api.md
init.sql/: 0.sql  1.sql
src/: auth.rs  db.rs  errors.rs  main.rs  middleware.rs  routes.rs
src/handlers/: appointment.rs  breed.rs  client.rs  medical_record.rs  mod.rs  patient.rs  patient_procedure.rs  procedure.rs  statistic.rs  user.rs
src/models/: appointment.rs  breed.rs  client.rs  enums.rs  medical_record.rs  mod.rs  patient.rs  patient_procedure.rs  procedure.rs  statistic.rs  user.rs
