[package]
name = "veterinaria_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web = "4"
sqlx = { version = "0.8", features = [
    "postgres",
    "bigdecimal",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "chrono",
] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.19", features = ["derive"] }
thiserror = "2.0.12"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"

[dev-dependencies]
serde_json = "1.0"
